2023-04-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* Makefile.am: Initialize (as empty) Automake variables that we
	don't use but which gnulib modules expect to be defined.
	(AUTOMAKE_OPTIONS, SUBDIRS, noinst_HEADERS, noinst_LTLIBRARIES)
	(pkgdata_DATA, MOSTLYCLEANDIRS, AM_CFLAGS): Do it.

	Thanks to Bruno Haible for the advice.

2023-06-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Offer advice to users of PDF who want a table of contents
	at the front of the document.

	* doc/groff.texi (ms Document Structure): Move mention of
	pdfjam(1) from here...
	(ms TOC): ...to here, and identify alternatives, including
	gropdf(1)'s `pdfswitchtopage` macro.

	* doc/ms.ms (General structure of an ms document):
	(Creating a table of contents): Similar.

	Fixes <https://savannah.gnu.org/bugs/?64278>.  Thanks to Michał
	Kruszewski for the report.

2023-06-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	[docs]: Migrate terminology to "scaling unit".

	...from "scaling indicator".

	Fixes <https://savannah.gnu.org/bugs/?60957>.  Thanks to Ingo
	Schwarze for the discussion.

2023-05-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[docs]: Revise discussion of fonts.

	* doc/groff.texi:
	- Rename node/section "Fonts and Symbols" to "Using Fonts".  Add
	  giant new introduction, properly establishing terminology.
	- Rename node/section "Changing Fonts" to "Selecting Fonts".
	  Shift location of `.fn` and `.sty` register documentation.
	  Rewrite presentation of `ft` and `\f`.  Discuss typeface
	  selection by mounting position and font (or style) name
	  together; since arguments to these formatter instructions are
	  always interpreted as mounting positions first, it doesn't
	  make much sense to me to present them separately, and the new
	  introduction provides the necessary background.  Tighten
	  example.  Document that current and previous font selections
	  are environment properties.
	- Add several concept index entries.